Add business analytics

--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -14,3 +14,9 @@ notes:
       Machine Learning is analysis of...
     Back: |
       Analysis of computer-science or -vision data is called...
+- id: 1536273769801
+  fields:
+    Front: |
+      Business Analytics is analysis of...
+    Back: |
+      Analysis of customer data is called...
