Add statistical process control

--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -20,3 +20,9 @@ notes:
       Business Analytics is analysis of...
     Back: |
       Analysis of customer data is called...
+- id: 1536273769861
+  fields:
+    Front: |
+      Statistical Process Control is analysis of...
+    Back: |
+      Analysis of data about industrial processes is called...
