--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -26,3 +26,9 @@ notes:
       Statistical Process Control is analysis of...
     Back: |
       Analysis of data about industrial processes is called...
+- id: 1536273769901
+  fields:
+    Front: |
+      Econometrics is analysis of...
+    Back: |
+      Analysis of economic data is called...
