Add signal processing

--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -32,3 +32,9 @@ notes:
       Econometrics is analysis of...
     Back: |
       Analysis of economic data is called...
+- id: 1536273769950
+  fields:
+    Front: |
+      Signal Processing is analysis of...
+    Back: |
+      Analysis of electrical-signal data is called...
