--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -38,3 +38,9 @@ notes:
       Signal Processing is analysis of...
     Back: |
       Analysis of electrical-signal data is called...
+- id: 1536273770011
+  fields:
+    Front: |
+      Biostatistics is analysis of...
+    Back: |
+      Analysis of medical data is called...
