--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -44,3 +44,9 @@ notes:
       Biostatistics is analysis of...
     Back: |
       Analysis of medical data is called...
+- id: 1536273770062
+  fields:
+    Front: |
+      Natural Language Processing is analysis of...
+    Back: |
+      Analysis of textual data is called...
