Add data science

--- a/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
+++ b/Coursework/Coursera/DataScience/twosided_analysis-types_brainstorms.yml
@@ -50,3 +50,9 @@ notes:
       Natural Language Processing is analysis of...
     Back: |
       Analysis of textual data is called...
+- id: 1536273770112
+  fields:
+    Front: |
+      Data Science is analysis of...
+    Back: |
+      Analysis of web data is called...
