Add test-space probabilities

--- a/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
@@ -32,3 +32,12 @@ notes:
       - Type-II Error Rate \\(= \beta = FNR = p(R^-|C^+)\\)
       - Sensitivity \\(= TPR = p(R^+|C^+)\\)
       - Specificity \\(= TNR = p(R^-|C^-)\\)
+- id: 1536273877801
+  fields:
+    Front: |
+      List the binary classification probabilities in the test sample spaces.
+    Back: |
+      - \\(FDR = p(C^-|R^+)\\)
+      - \\(FOR = p(C^+|R^-)\\)
+      - Precision \\(= PPV = p(C^+|R^+)\\)
+      - \\(NPV = p(C^-|R^-)\\)
