--- a/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
@@ -65,3 +65,9 @@ notes:
       What is the probability space for "Type-II Error Rate" in the context of a binary classification test?
     Back: |
       \\(C^+\\): the condition is positive.
+- id: 1536273878166
+  fields:
+    Front: |
+      What is the probability space for "sensitivity" in the context of a binary classification test?
+    Back: |
+      \\(C^+\\): the condition is positive.
