--- a/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/stats-vocab_brainstorm.yml
@@ -83,3 +83,9 @@ notes:
       What is the probability space for "False Discovery Rate" in the context of a binary classification test?
     Back: |
       \\(R^+\\): the test result is positive.
+- id: 1536273878349
+  fields:
+    Front: |
+      What is the probability space for "False Omission Rate" in the context of a binary classification test?
+    Back: |
+      \\(R^-\\): the test result is negative.
