--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -14,3 +14,9 @@ notes:
       A "confounder" is...
     Back: |
       A variable that influences both the dependent and indepent variables causing a spurious association is called...
+- id: 1536273878565
+  fields:
+    Front: |
+      A "spurious correlation" is...
+    Back: |
+      A correlation between variables that are not causally related is called...
