--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -20,3 +20,9 @@ notes:
       A "spurious correlation" is...
     Back: |
       A correlation between variables that are not causally related is called...
+- id: 1536273878616
+  fields:
+    Front: |
+      "Accuracy", in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(TP)+p(TN)\\) of a correct test is known as...
