--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -26,3 +26,9 @@ notes:
       "Accuracy", in the context of a binary classification test, is defined as...
     Back: |
       The probability \\(p(TP)+p(TN)\\) of a correct test is known as...
+- id: 1536273878666
+  fields:
+    Front: |
+      "Inaccuracy" (my term), in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(FP)+p(FN)\\) of an incorrect test is known as...
