--- a/math_staging.yml
+++ b/math_staging.yml
@@ -9,3 +9,14 @@ defaults:
   - CAC-00.A-Diagnostics-Algebra
   markdownTabLength: 2
 notes:
+- id: 1537323241238
+  fields:
+    Front: |
+      ## 00.A 01a: Evaluate wihtout using a calculator.
+      \\[
+      (-3)^4
+      \\]
+    Back: |
+      \\[
+      81
+      \\]
