Mark AFI-01.01 done (Python).

--- a/Code/DSA/Books/AlgorithmsForInterviews/01a_searching_binary-search.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/01a_searching_binary-search.yml
@@ -18,6 +18,8 @@ defaults:
   markdownTabLength: 4
 notes:
 - id: 1536203009027
+  extraTags:
+  - Done-Python
   fields:
     Front: |
       ## 01.01: Computing square roots
