--- a/Code/DSA/Books/AlgorithmsForInterviews/01b_searching_hashing.yml
+++ b/Code/DSA/Books/AlgorithmsForInterviews/01b_searching_hashing.yml
@@ -98,6 +98,8 @@ notes:
           print(anagram_groups)
       ```
 - id: 1536203067604
+  extraTags:
+  - Done-Python
   fields:
     Front: |
       ## 01.09: Search for a pair which sums to \\(S\\)
@@ -107,6 +109,27 @@ notes:
       Design an efficient algorithm for determining if there exist a pair of indices \\(i,j\\) (not necessarily distinct) such that \\(A[i]+A[j]=S\\).
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 18.
+    Python: |
+      ```{python }
+          def find_pair_summing_to(S, A):
+            reverse_map = {v:i for (i,v) in enumerate(A)}
+            for i,a in enumerate(A):
+              t = S-a
+              if t in reverse_map:
+                j = reverse_map[t]
+                return i,j
+            return None
+
+          def try_sum(A, S):
+            pair = find_pair_summing_to(S, A)
+            if pair is None: return None
+            i, j = pair
+            return i, j, A[i], A[j], A[i]+A[j]
+
+          A = [-19, -18, -17, -10, -10, -9, -8, -7,
+            -7, -5, -2, 0, 2, 4, 5, 7, 8, 13, 13, 15]
+          [try_sum(A, S) for S in range(-40,40)]
+      ```
 - id: 1536203067654
   fields:
     Front: |
