Add "Sorts" tag in _brainstorm_sorts_

--- a/Code/DSA/brainstorms_sorts.yml
+++ b/Code/DSA/brainstorms_sorts.yml
@@ -4,6 +4,7 @@ defaults:
   tags:
   - Code
   - Algorithms
+  - Sorts
   - Brainstorms
   fields:
     Python: "**To-do: Python.**"
@@ -21,7 +22,6 @@ notes:
       Write selection sort.
     Python: |
       ```{python }
-      #
       def selection_sort(data):
         n = len(data)
         for i in range(n):
