--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -32,3 +32,9 @@ notes:
       "Inaccuracy" (my term), in the context of a binary classification test, is defined as...
     Back: |
       The probability \\(p(FP)+p(FN)\\) of an incorrect test is known as...
+- id: 0
+  fields:
+    Front: |
+      "Prevalence", in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(C^+)\\) of a condition is known as...
