Imprevalence, for lack of a better word

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -38,3 +38,9 @@ notes:
       "Prevalence", in the context of a binary classification test, is defined as...
     Back: |
       The probability \\(p(C^+)\\) of a condition is known as...
+- id: 0
+  fields:
+    Front: |
+      "Imprevalence" (my term), in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(C^-)\\) of a condition's complement is known as...
