Positive test rate, for lack of a better term

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -44,3 +44,9 @@ notes:
       "Imprevalence" (my term), in the context of a binary classification test, is defined as...
     Back: |
       The probability \\(p(C^-)\\) of a condition's complement is known as...
+- id: 0
+  fields:
+    Front: |
+      "PTR (Positive Test Rate)" (my term), in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(R^+)\\) of a positive test result is known as...
