Negative test rate, for lack of a better term

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -50,3 +50,9 @@ notes:
       "PTR (Positive Test Rate)" (my term), in the context of a binary classification test, is defined as...
     Back: |
       The probability \\(p(R^+)\\) of a positive test result is known as...
+- id: 0
+  fields:
+    Front: |
+      "NTR (Negative Test Rate)" (my term), in the context of a binary classification test, is defined as...
+    Back: |
+      The probability \\(p(R^-)\\) of a negative test result is known as...
