--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -75,3 +75,9 @@ notes:
       "False Positive", in the context of a binary classification test, is defined as...
     Back: |
       \\(TP=R^+ \cap C^-\\), an incorrect, positive test result for a condition when the condition is absent.
+- id: 0
+  fields:
+    Front: |
+      "False Negative", in the context of a binary classification test, is defined as...
+    Back: |
+      \\(TN=R^- \cap C^-\\), an incorrect, negative test result for a condition when the condition is present.
