--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -88,3 +88,9 @@ notes:
       "Sensitivity", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(R^+ | C^+)\\) of a correct, positive test result given that the condition is present is known as...
+- id: 0
+  fields:
+    Front: |
+      "Specificity", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(R^- | C^-)\\) of a correct, negative test result given that the condition is absent is known as...
