--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -94,3 +94,9 @@ notes:
       "Specificity", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(R^- | C^-)\\) of a correct, negative test result given that the condition is absent is known as...
+- id: 0
+  fields:
+    Front: |
+      "Type-I Error Rate", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(R^+ | C^-)\\) of an incorrect, positive test result given that the condition is absent is known as...
