Type-II error rate

--- a/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
+++ b/Coursework/Coursera/DataScience/twosided_stats-vocab_brainstorm.yml
@@ -100,3 +100,9 @@ notes:
       "Type-I Error Rate", in the context of a binary classification test, is defined as...
     Back: |
       The (conditional) probability \\(p(R^+ | C^-)\\) of an incorrect, positive test result given that the condition is absent is known as...
+- id: 0
+  fields:
+    Front: |
+      "Type-II Error Rate", in the context of a binary classification test, is defined as...
+    Back: |
+      The (conditional) probability \\(p(R^- | C^+)\\) of an incorrect, negative test result given that the condition is present is known as...
